--- a/css/main.css
+++ b/css/main.css
@@ -1,273 +1,3 @@
-/*COMMON*/
-body {
-  font-family: 'Nanum Gothic', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.4;
-  color: #333;
-}
-a {
-  text-decoration: none;
-}
-img {
-  /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
-  display: block;
-}
-
-/*INNER*/
-.inner {
-  width: 1100px;
-  margin: 0 auto;
-  position: relative;
-}
-
-/*BUTTON*/
-.btn {
-  width: 130px;
-  padding: 10px;
-  border: 2px solid #333;
-  border-radius: 4px;
-  color: #333;
-  font-size: 16px;
-  font-weight: 700;
-  text-align: center;
-  cursor: pointer;
-  box-sizing: border-box;
-  display: block;
-  transition: .4s;
-}
-.btn:hover {
-  background-color: #333;
-  color: #FFF;
-}
-.btn.btn--reverse {
-  background-color: #333;
-  color: #FFF;
-}
-.btn.btn--reverse:hover {
-  background-color: transparent;
-  color: #333;
-}
-.btn.btn--brown {
-  color: #592B18;
-  border-color: #592B18;
-}
-.btn.btn--brown:hover {
-  color: #FFF;
-  background-color: #592B18;
-}
-.btn.btn--gold {
-  color: #D9AA8A;
-  border-color: #D9AA8A;
-}
-.btn.btn--gold:hover {
-  color: #FFF;
-  background-color: #D9AA8A;
-}
-.btn.btn--white {
-  color: #FFF;
-  border-color: #FFF;
-}
-.btn.btn--white:hover {
-  color: #333;
-  background-color: #FFF;
-}
-
-/*BACK TO POSITION*/
-.back-to-position {
-  opacity: 0;
-  transition: 1s;
-}
-.back-to-position.to-right {
-  transform: translateX(-150px);
-}
-.back-to-position.to-left {
-  transform: translateX(150px);
-}
-.show .back-to-position {
-  opacity: 1;
-  transform: translateX(0);
-}
-.show .back-to-position.delay-0 {
-  transition-delay: 0s;
-}
-.show .back-to-position.delay-1 {
-  transition-delay: .3s;
-}
-.show .back-to-position.delay-2 {
-  transition-delay: .6s;
-}
-.show .back-to-position.delay-3 {
-  transition-delay: .9s;
-}
-
-
-/*HEADER*/
-header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 9;
-  background-color: #F6F5F0;
-  border-bottom: 1px solid #c8c8c8;
-}
-header > .inner {
-  height: 120px;
-}
-header .logo {
-  height: 75px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-}
-header .sub-menu {
-  position: absolute;
-  top: 10px;
-  right: 0;
-  display: flex;
-}
-header .sub-menu ul.menu {
-  font-family: Arial, sans-serif;
-  display: flex;
-}
-header .sub-menu ul.menu li {
-  position: relative;
-}
-header .sub-menu ul.menu li::before {
-  content: "";
-  width: 1px;
-  height: 12px;
-  background-color: #e5e5e5;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-}
-header .sub-menu ul.menu li:first-child::before {
-  display: none;
-}
-header .sub-menu ul.menu li a {
-  padding: 11px 16px;
-  display: block;
-  font-size: 13px;
-  color: #656565;
-}
-header .sub-menu ul.menu li a:hover {
-  color: #000;
-}
-header .sub-menu .search {
-  position: relative;
-  height: 34px;
-}
-header .sub-menu .search input {
-  width: 36px;
-  height: inherit;
-  padding: 4px 10px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  border-radius: 5px;
-  outline: none;
-  background-color: #fff;
-  color: #777;
-  font-size: 12px;
-  transition: width .4s;
-}
-header .sub-menu .search input:focus {
-  width: 190px;
-  border-color: #669900;
-}
-header .sub-menu .search .material-icons {
-  height: 24px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 5px;
-  margin: auto;
-  transition: .4s;
-}
-header .sub-menu .search.focused .material-icons {
-  opacity: 0;
-}
-header .main-menu {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-  display: flex;
-}
-header .main-menu .item .item__name {
-  padding: 10px 20px 34px 20px;
-  font-family: Arial, sans-serif;
-  font-size: 13px;
-}
-header .main-menu .item:hover .item__name {
-  background-color: #2C2A29;
-  color: #669900;
-  border-radius: 6px 6px 0 0;
-}
-header .main-menu .item .item__contents {
-  width: 100%;
-  position: fixed;
-  left: 0;
-  display: none;
-}
-header .main-menu .item:hover .item__contents {
-  display: block;
-}
-header .main-menu .item .item__contents .contents__menu {
-  background-color: #2C2A29;
-}
-header .main-menu .item .item__contents .contents__menu > ul {
-  padding: 20px 0;
-  display: flex;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li {
-  width: 220px;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li h4 {
-  padding: 3px 0 12px 0;
-  font-size: 14px;
-  color: #fff;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li ul li {
-  padding: 5px 0;
-  font-size: 12px;
-  color: #999;
-  cursor: pointer;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li ul li:hover {
-  color: #669900;
-}
-header .main-menu .item .item__contents .contents__texture {
-  padding: 26px 0;
-  font-size: 12px;
-  background-image: url("../images/main_menu_pattern.jpg");
-}
-header .main-menu .item .item__contents .contents__texture h4 {
-  color: #999;
-  font-weight: 900;
-}
-header .main-menu .item .item__contents .contents__texture p {
-  color: #64a70b;
-  margin: 4px 0 14px;
-}
-/*BADGES*/
-header .badges {
-  position: absolute;
-  top: 132px;
-  right: 12px;
-}
-header .badges .badge {
-  border-radius: 10px;
-  overflow: hidden;
-  margin-bottom: 12px;
-  box-shadow: 4px 4px 10px rgba(0,0,0,.15);
-  cursor: pointer;
-}
-
-
 /*VISUAL*/
 .visual {
   margin-top: 120px;
@@ -315,7 +45,6 @@ header .badges .badge {
 .visual .fade-in {
   opacity: 0;
 }
-
 
 /*NOTICE*/
 /*NOTICE LINE*/
@@ -408,7 +137,7 @@ header .badges .badge {
   background-color: #f6f5ef;
   position: relative;
   overflow: hidden;
-  transition: height .4s;
+  transition: height 0.4s;
 }
 .notice .promotion.hide {
   height: 0;
@@ -424,7 +153,7 @@ header .badges .badge {
 }
 .notice .promotion .swiper-slide {
   position: relative;
-  opacity: .5;
+  opacity: 0.5;
   transition: opacity 1s;
 }
 .notice .promotion .swiper-slide-active {
@@ -474,7 +203,7 @@ header .badges .badge {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: .4s;
+  transition: 0.4s;
 }
 .notice .promotion .swiper-prev {
   left: 50%;
@@ -489,7 +218,6 @@ header .badges .badge {
   background-color: #333;
   color: #fff;
 }
-
 
 /*REWARDS*/
 .rewards {
@@ -535,7 +263,6 @@ header .badges .badge {
   flex: 1;
 }
 
-
 /*YOUTUBE VIDEO*/
 .youtube {
   position: relative;
@@ -567,7 +294,7 @@ header .badges .badge {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.3);
+  background-color: rgba(0, 0, 0, 0.3);
   background-image: url("../images/video_cover_pattern.png");
 }
 #player {
@@ -590,7 +317,6 @@ header .badges .badge {
   top: 350px;
   left: 150px;
 }
-
 
 /*SEASON PRODUCT*/
 .season-product {
@@ -616,7 +342,6 @@ header .badges .badge {
   margin-bottom: 15px;
 }
 
-
 /*RESERVE COFFEE*/
 .reserve-coffee {
   background-image: url("../images/reserve_bg.jpg");
@@ -639,7 +364,6 @@ header .badges .badge {
   top: 0;
   right: 0;
 }
-
 
 /*PICK YOUR FAVORITE*/
 .pick-your-favorite {
@@ -665,7 +389,6 @@ header .badges .badge {
 .pick-your-favorite .text-group .description {
   margin-bottom: 40px;
 }
-
 
 /*RESERVE STORE*/
 .reserve-store {
@@ -714,7 +437,6 @@ header .badges .badge {
   margin: auto;
 }
 
-
 /*FIND STORE*/
 .find-store {
   background-image: url("../images/find_store_bg.jpg");
@@ -734,7 +456,7 @@ header .badges .badge {
 }
 .find-store .picture {
   border-radius: 50%;
-  box-shadow: 2px 2px 8px 0 rgba(0,0,0,.5);
+  box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.5);
   position: absolute;
 }
 .find-store .picture1 {
@@ -756,7 +478,6 @@ header .badges .badge {
 .find-store .text-group .description {
   margin-bottom: 20px;
 }
-
 
 /*AWARDS*/
 .awards {
@@ -781,12 +502,12 @@ header .badges .badge {
   top: 0;
   bottom: 0;
   margin: auto;
-  opacity: .3;
+  opacity: 0.3;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: .4s;
+  transition: 0.4s;
 }
 .awards .swiper-prev {
   left: -100px;
@@ -799,81 +520,6 @@ header .badges .badge {
   background-color: #fff;
   color: #333;
 }
-
-
-/*FOOTER*/
-footer {
-  background-color: #272727;
-  border-top: 1px solid #333;
-}
-footer .inner {
-  padding: 40px 0 60px 0;
-}
-footer .menu {
-  display: flex;
-  justify-content: center;
-}
-footer .menu li {
-  position: relative;
-}
-footer .menu li::before {
-  content: "";
-  width: 3px;
-  height: 3px;
-  background-color: #555;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: -1px;
-  margin: auto;
-}
-footer .menu li:last-child::before {
-  display: none;
-}
-footer .menu li a {
-  display: block;
-  color: #CCC;
-  font-size: 12px;
-  font-weight: 700;
-  padding: 15px;
-}
-footer .menu li a.green {
-  color: #669900;
-}
-footer .btn-group {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-}
-footer .btn-group .btn {
-  font-size: 12px;
-  margin-right: 10px;
-}
-footer .btn-group .btn:last-child {
-  margin-right: 0;
-}
-footer .info {
-  margin-top: 30px;
-  text-align: center;
-}
-footer .info span {
-  margin-right: 20px;
-  color: #999;
-  font-size: 12px;
-}
-footer .info span:last-child {
-  margin-right: 0;
-}
-footer .copyright {
-  color: #999;
-  font-size: 12px;
-  text-align: center;
-  margin-top: 12px;
-}
-footer .logo {
-  margin: 30px auto 0;
-}
-
 
 /*SCROLL TO TOP*/
 #to-top {
